@@ -1,7 +1,7 @@
 <registry>
     <record name="collective.pwexpiry.validity_period">
         <field type="plone.registry.field.Int">
-            <title>Number of days for password validity</title>
+            <title>Number of days for password validity.</title>
         </field>
         <value>90</value>
     </record>
@@ -11,5 +11,17 @@
             <description>A list of registered notification adapters to use. Defaults to all registered notification adapters if not set.</description>
             <value_type type="plone.registry.field.TextLine"/>
         </field>
+    </record>
+    <record name="collective.pwexpiry.allowed_tries">
+        <field type="plone.registry.field.Int">
+            <title>Number of incorrect password tries, before locking the account.</title>
+        </field>
+        <value>3</value>
+    </record>
+    <record name="collective.pwexpiry.disable_time">
+        <field type="plone.registry.field.Int">
+            <title>Time, in hours, to lock the account if an invalid password was entered many times.</title>
+        </field>
+        <value>24</value>
     </record>
 </registry>
